run prettier in all files

--- a/pages/blog/arquitectura-de-la-informacion-en-el-desarrollo-web.mdx
+++ b/pages/blog/arquitectura-de-la-informacion-en-el-desarrollo-web.mdx
@@ -4,14 +4,21 @@ export const metadata = {
   language: "es",
 };
 
-import BlogPostLayout from "../../components/BlogPostLayout"
-export default ({ children }) => <BlogPostLayout {...metadata}>{children}</BlogPostLayout>
+import BlogPostLayout from "../../components/BlogPostLayout";
+export default ({ children }) => (
+  <BlogPostLayout {...metadata}>{children}</BlogPostLayout>
+);
 
-export const jerarquia = "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/jerarquia.jpg"
-export const jerarquiasAnidadas = "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/jerarquias-anidadas.jpg"
-export const heterarquia = "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/heterarquia.jpg"
-export const heterarquiasEnNetflix = "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/heterarquias-en-netflix.jpg"
-export const folksonomyQuora = "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/folksonomy-quora.jpg"
+export const jerarquia =
+  "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/jerarquia.jpg";
+export const jerarquiasAnidadas =
+  "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/jerarquias-anidadas.jpg";
+export const heterarquia =
+  "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/heterarquia.jpg";
+export const heterarquiasEnNetflix =
+  "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/heterarquias-en-netflix.jpg";
+export const folksonomyQuora =
+  "/blog/arquitectura-de-la-informacion-en-el-desarrollo-web/folksonomy-quora.jpg";
 
 # Arquitectura de la Información en el Desarrollo Web
 
