--- a/pages/blog/design-thinking.mdx
+++ b/pages/blog/design-thinking.mdx
@@ -1,14 +1,18 @@
 export const metadata = {
   title: "Dos métodos del Design Thinking",
   date: "2017-09-08T21:08:26+02:00",
-  lang: "es"
-}
+  lang: "es",
+};
 
-import BlogPostLayout from "../../components/BlogPostLayout"
-export default ({ children }) => <BlogPostLayout {...metadata}>{children}</BlogPostLayout>
+import BlogPostLayout from "../../components/BlogPostLayout";
+export default ({ children }) => (
+  <BlogPostLayout {...metadata}>{children}</BlogPostLayout>
+);
 
-export const doubleDiamondImage = "/blog/design-thinking/double-diamond-model.svg"
-export const doubleDiamondImageDark = "/blog/design-thinking/double-diamond-model-dark.svg"
+export const doubleDiamondImage =
+  "/blog/design-thinking/double-diamond-model.svg";
+export const doubleDiamondImageDark =
+  "/blog/design-thinking/double-diamond-model-dark.svg";
 
 # Dos métodos del Design Thinking
 
