--- a/pages/blog/test.mdx
+++ b/pages/blog/test.mdx
@@ -1,5 +1,4 @@
-import Layout from "../../components/Layout"
-export default ({ children }) => <Layout>{children}</Layout>
+import Layout from "../../components/Layout";
+export default ({ children }) => <Layout>{children}</Layout>;
 
 # Hello, world
-
