some implementation fixes and refactors

--- a/pages/blog/test.mdx
+++ b/pages/blog/test.mdx
@@ -58,7 +58,7 @@ Let's focus on the script part only.
 <!-- ```diff 7:13 -->
 <!-- ``` -->
 
-```html
+```html 5:13
 <template>
   <div>Window width is: {{ windowWidth }}</div>
 </template>
@@ -76,9 +76,9 @@ Let's focus on the script part only.
 
 ---
 
-We have a state that has the value of the window width. To make this more responsive, we should also add resize eevent handlers to our component.
+We have a state that has the value of the window width. To make this more responsive, we should also add resize event handlers to our component.
 
-```html
+```html 11:22
 <template>
   <div>Window width is: {{ windowWidth }}</div>
 </template>
